# Hackathon-HealthyWays

./: LICENSE  README.md  pyproject.toml
data/: anzahl-sbb-bahnhofbenutzer.csv  passagierfrequenz.csv  plaetze.csv  transit types capacity.txt
data/vbz_fahrgastzahlen/: .~lock.REISENDE_PARTaa.csv#  HALTESTELLEN.csv  Haltestellen_Richtungen.csv  LINIE.csv  TAGTYP.csv  import_data_test.py  stationen.txt
data/vbz_haltestellen/: ZVV_HALTESTELLEN_P.csv
healthyways/: VBZ Data Experiments.ipynb  corona_maps.py  import_env_variable.py  vbz_predictions.py  vbz_training.py
healthyways/saved_models/: encoder.pkl  vbz_model.h5
tests/: test_healthyways.py
